[gd_scene load_steps=6 format=3 uid="uid://d3w76petqol61"]

[ext_resource type="Texture2D" uid="uid://b3be2kb5m28li" path="res://planten/fase_5.png" id="1_loy7v"]
[ext_resource type="Texture2D" uid="uid://d3d8hmfbhd2s7" path="res://planten/fase_1.png" id="2_7kljp"]
[ext_resource type="Script" path="res://Next.gd" id="3_2muk6"]
[ext_resource type="Script" path="res://clicker.gd" id="3_g75sc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1box"]
bg_color = Color(1, 1, 1, 1)

[node name="Level_1" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o1box")

[node name="Plant_1" type="Sprite2D" parent="CanvasLayer/Panel"]
position = Vector2(173, 334)
scale = Vector2(0.276033, 0.275465)
texture = ExtResource("1_loy7v")

[node name="Plant_Label" type="Label" parent="CanvasLayer/Panel/Plant_1"]
modulate = Color(0, 0, 0, 1)
offset_left = -328.113
offset_top = 861.295
offset_right = 347.887
offset_bottom = 1026.3
theme_override_font_sizes/font_size = 120
text = "Done!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Plant_2" type="Sprite2D" parent="CanvasLayer/Panel"]
position = Vector2(477, 334)
scale = Vector2(0.276033, 0.275465)
texture = ExtResource("2_7kljp")
script = ExtResource("3_g75sc")

[node name="plant_bar" type="ProgressBar" parent="CanvasLayer/Panel/Plant_2"]
offset_left = -574.197
offset_top = 881.803
offset_right = 633.803
offset_bottom = 1022.8
theme_override_font_sizes/font_size = 80
step = 1.0
metadata/_edit_use_anchors_ = true

[node name="Plant_Label" type="Label" parent="CanvasLayer/Panel/Plant_2"]
modulate = Color(0, 0, 0, 1)
offset_left = -328.113
offset_top = 861.295
offset_right = 347.887
offset_bottom = 1026.3
theme_override_font_sizes/font_size = 120
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NextButton" type="Button" parent="CanvasLayer/Panel/Plant_2"]
visible = false
offset_left = 1116.0
offset_top = 472.0
offset_right = 1254.0
offset_bottom = 617.0
theme_override_font_sizes/font_size = 100
text = "+"
script = ExtResource("3_2muk6")
